syntax = "proto3";

package streaming.bidirectional;

service ChatService {
  rpc SendMessages (stream ChatMessagesRequest) returns (stream ChatMessagesResponse) {}
  rpc DirectMessage (DirectMessageRequest) returns (DirectMessageResponse) {}
}

message ChatMessagesRequest {
	oneof messages {
		UserLogin user_login = 1;	
		ChatMessage chat_message = 2;
	}
}


message ChatMessagesResponse {
	string send_from_user_id = 1;
	string send_from_user_name = 2;
	oneof messages {
		UserLogin user_login = 3;	
		ChatMessage chat_message = 4;
		UserLogout user_logout = 5;
	}
}

message ChatMessage {
	string id = 1;
	string message  = 2;
}

message UserLogin {
	string id = 1;
	string name = 2;
}

message UserLogout {
	string id = 1;
	string name = 2;
}

message DirectMessageRequest  {
	string id = 1;
	string send_to = 2;
	string message  = 3;
}

message DirectMessageResponse {
}
